--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="./index.html">Главная</a>
     <a href="./catalog/catalog.html">Каталог</a>
     <a href="./contacts/contacts.html">Контакты</a>
-    <h1>Главная страница</h1>
+    <h1>Самая Главная страница</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus nemo suscipit minima consequuntur tempore
         molestiae dolores omnis ut excepturi! Expedita nam dolore suscipit. Optio facere necessitatibus accusantium
         corporis unde cupiditate!</p>
