--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <a href="./index.html">Главная</a>
     <a href="./catalog/catalog.html">Каталог</a>
     <a href="./contacts/contacts.html">Контакты</a>
-    <h1>Самая Главная страница</h1>
-    <p>Lorem cupiditate!</p>
+    <h1>Главная страница</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus nemo suscipit minima consequuntur tempore
+        molestiae dolores omnis ut excepturi! Expedita nam dolore suscipit. Optio facere necessitatibus accusantium
+        corporis unde cupiditate!</p>
     <h2>Добро пожаловать на сайт</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi eum ipsa unde voluptas!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi eum ipsa unde voluptas!</p>
